<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OOSEGame</string>
    <string name="action_settings">Settings</string>
    <string name="chinesechess">中國象棋</string>
    <string name="darkchess">台灣暗棋</string>
    <string name="newgame">開新遊戲</string>
    <string name="loadgame">載入存檔</string>
    <string name="chess">棋</string>
    <string name="timesetup">時間限制</string>
    <string name="picturesetup">照片設定</string>
    <string name="timelimiton">開啟時間限制</string>
    <string name="timelimitoff">關閉時間限制</string>
    <string name="chessconditionsetup">設定</string>
    <string name="startgame">開始</string>
    <string name="player1">玩家1</string>
    <string name="player2">玩家2</string>
    <string name="fromfile">從圖庫</string>
    <string name="takepicture">立即拍攝</string>
    <string name="choosepicture">選擇照片</string>
    <string name="chinesechessgame">ChineseChessGame</string>
    <string name="save">存檔</string>
    <string name="pause">暫停</string>
    <string name="giveup">投降</string>
    <string name="fallbackok">悔棋成功 剩餘次數: </string>
    <string name="fallbackfail">悔棋失敗</string>
    <string name="saveok">存檔成功</string>
    <string name="darkchessgame">DarkChessGame</string>
    <string name="gameover">遊戲結束</string>
    <string name="fallback">悔棋</string>
    <string name="moremenu">更多選項</string>
    <string name="peace">和局</string>
    <string name="resume">回到遊戲</string>
    <string name="peacedescription">你要和局嗎？</string>
    <string name="yes">是</string>
    <string name="no">否</string>


</resources>
