<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="PictureSetup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black_overlay"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/imagePlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPlayer2"
        android:layout_alignTop="@+id/editTextPlayer2"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_launcher"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/ButtonPlayer2SetPictureFromFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ButtonPlayer2TakePicture"
        android:layout_alignRight="@+id/ButtonPlayer2TakePicture"
        android:layout_alignTop="@+id/imagePlayer2"
        android:onClick="pickPicture"
        android:text="@string/fromfile" />

    <EditText
        android:id="@+id/editTextPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:text="@string/player2" />

    <Button
        android:id="@+id/ButtonPlayer1SetPictureFromFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonPlayer1TakePicture"
        android:layout_alignLeft="@+id/ButtonPlayer1TakePicture"
        android:layout_alignRight="@+id/ButtonPlayer1TakePicture"
        android:onClick="pickPicture"
        android:text="@string/fromfile" />

    <ImageView
        android:id="@+id/imagePlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPlayer1"
        android:layout_alignTop="@+id/ButtonPlayer1SetPictureFromFile"
        android:src="@drawable/ic_launcher"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonPlayer1SetPictureFromFile"
        android:layout_alignRight="@+id/ButtonPlayer1SetPictureFromFile"
        android:ems="10"
        android:text="@string/player1" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/ButtonPlayer1TakePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPlayer2"
        android:layout_alignRight="@+id/editTextPlayer2"
        android:layout_marginBottom="15dp"
        android:onClick="takePicture"
        android:text="@string/takepicture" />

    <Button
        android:id="@+id/ButtonPlayer2TakePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextPlayer2"
        android:layout_below="@+id/ButtonPlayer2SetPictureFromFile"
        android:onClick="takePicture"
        android:text="@string/takepicture" />

</RelativeLayout>